Day 3 - Fixing the navbar issue with shifting better approach

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between; /* */
-  width: 100vw;
+  width: 100%;
   position: fixed;
   z-index: 1000;
   top: 0;
